testsuite/bsc.syntax/bsv05/ImperativeFunctionCaseMatchingNestedBad.bsv.bsc-out.expected
checking package dependencies
Error: "ImperativeFunctionCaseMatchingNestedBad.bsv", line 13, column 21: (P0005)
  Unexpected identifier `first'; expected pattern or `}'
